# mekosh

./: .gitignore  CMakeLists.txt  README.md
lib/: utils.h
src/: main.c  utils.c
